Replaced .collect(Collectors.toList() to .toList()